# meson-bug-report

./: README.md  meson.build  meson_options.txt
src/: kinds.F90  main.f90
